Postman/Wizard/assets/css/wizard.css
/* ... */
.ps-wizard-error {
  color: red !important;
}

.ps-wizard-success {
  color: green !important;
}

.ps-wizard-error,
.ps-wizard-success {
  display: block;
  font-weight: 600;
  ;
}

.ps-loading-test-report {
  display: inline-flex;
  align-items: center;
}

.ps-wizard-pages {
  min-height: 351px;
}

.ps-wizard-edit .dashicons-edit {
  cursor: pointer;
  display: none;
}

.ps-wizard-socket {
  display: none;
}

.ps-wizard-back {
  font-size: 12px;
  text-decoration: none;
  color: #375caf !important;
}

.ps-wizard-back span {
  font-size: 13px;
  vertical-align: sub;
}

.ps-wizard-socket h3 {
  margin: 5px 0;
  color: #214A72;
}

.ps-form-ui label {
  font-weight: 600;
  color: #214A72;
}

.ps-form-ui input[type="text"],
.ps-form-ui select {
  width: 100% !important;
  max-width: 100% !important;
  height: 37px;
  margin-top: 5px;
  border-radius: 2px;
  border: 1px solid #DCDFE5 !important;
  background: #FDFDFE !important;
  border-radius: 0;
}

.ps-switch-1 .slider {
  background-color: #fff !important;
  border-radius: 20px;
  border: 0.5px solid #C2CDD9 !important;
}

.ps-switch-1 .slider:before {
  background-color: #C2CDD9 !important;
  left: 1px !important;
  bottom: 1px !important;
}

.ps-form-control {
  margin-bottom: 25px;
}

.ps-form-control-info {
  color: #979797;
  font-size: 10px;
}

.ps-wizard-socket {
  line-height: 22px;
}

.ps-form-switch-control {
  display: inline-block;
}

.ps-form-switch-control .ps-switch-1 input:checked+.slider {
  /* background-color: #214A72 !important; */
  border-color: #214A72 !important;
}

.ps-form-switch-control .ps-switch-1 input:checked+.slider:before {
  background-color: #214A72 !important;
}

.ps-wizard-congrates {
  float: left;
}

.ps-wizard-view-logs {
  float: right;
}

.ps-wizard-pages .ps-wizard-step-4 a {
  color: #375caf;
}

.ps-wizard-card {
  background: whitesmoke;
  padding: 8px 15px;
}

.ps-wizard-card p {
  margin-bottom: 30px;
}

.ps-wizard-page-footer {
  width: 875px;
  text-align: center;
  margin: 45px auto;
}

.ps-wizard-page-footer a {
  margin: 0 25px;
  color: #949494;
}

.ps-wizard-footer .ps-active-nav .ps-wizard-circle span.ps-tick:before {
  content: "\f12a";
  background-color: transparent;
  margin: 0;
  height: auto;
  width: auto;
}


.ps-pro-extension-outer {
  position: relative;
}

.ps-pro-extension-tag {
  position: absolute;
  left: 0;
  top: 0;
  background: #FF9900;
  color: #ffffff;
}

.ps-pro-extension-tag {
  position: absolute;
  left: 85px;
  top: 3px;
  border-radius: 2px;
  border: 0.5px solid #214A72;
  background: linear-gradient(122deg, #214A72 14.11%, #3F8CD8 109.32%);
  color: #ffffff;
  font-size: 8px;
  font-weight: 700;
  font-family: sans-serif;
  padding: 0px 3px;
}

.ps-pro-popup-overlay {
  display: none;
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: #bfbfbfa1;
  z-index: 9990;
}

.ps-pro-popup-container {
  position: relative;
  width: 100%;
  height: 100%;
}

.ps-pro-popup-outer {
  position: absolute;
  width: 550px;
  height: 400px;
  background: #fff;
  margin: auto;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: 7px;
}

span.ps-pro-close-popup {
  position: absolute;
  right: 25px;
  top: 25px;
  color: #222222;
  border: 1px solid #e2e4ea;
  border-radius: 50px;
  cursor: pointer;
}

.ps-pro-popup-body {
  position: relative;
  line-height: 30px;
}

.ps-pro-popup-content {
  width: 100%;
  text-align: center;
  padding: 30px 90px 24px;
  box-sizing: border-box;
}

.ps-pro-popup-content h1 {
  color: #214A72;
  font-weight: 500;
  font-size: 20px;
  margin: 15px 0;
  line-height: 26px;
  padding: 0;
}

.ps-pro-popup-content p {
  font-size: 11px;
  color: #6A788B;
  margin: 25px 0;
  font-weight: 400;
  width: 75%;
  margin: 25px auto;
}

.ps-pro-promo-area {
  margin: 10px 0;
  display: flex;
  justify-content: center;
  position: relative;
}

.ps-pro-promo-area p {
  color: #214a72;
  font-size: 12px;
  margin: 0 auto;
}

.ps-pro-promo-area b {
  font-weight: bolder;
}

.ps-pro-coupon {
  background: #5e7cbf;
  display: inline-block;
  padding: 0px 35px 0 14px;
  border-radius: 7px;
  position: relative;
  overflow: hidden;
  border: 1px solid #5E7CBF;
}

.ps-pro-coupon b {
  color: #fff;
}

.ps-pro-discount {
  background: #121FCF;
  background: linear-gradient(298.51deg, #8ED2F5 -7.43%, #46519E 78.45%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  font-weight: bolder;
}

#ps-pro-code-copy-notification .dashicons {
  vertical-align: middle;
}

.ps-click-to-copy {
  vertical-align: sub;
}

.ps-click-to-copy {
  cursor: pointer;
}

.ps-wizard-connectivity-information {
  border: 1px solid #EFB3B3;
  padding: 8px;
  background: #FFE4E4;
  color: #000;
  margin-top: 15px;
}

.ps-wizard-connectivity-information .dashicons {
  color: #E57373;
}

.ps-wizard-outer.smtp2go_api-outer .ps-wizard-footer-left .ps-wizard-line::after {
  height: 515px !important;
}

.ps-wizard-outer.default-outer .ps-wizard-footer-left .ps-wizard-line::after {
  height: 320px !important;
}

.ps-wizard-pro-tag {
  background: #ffbf00;
  color: #ffffff;
  font-size: 11px;
  padding: 0px 8px;
  border-radius: 50px;
}

.ps-enable-gmail-one-click.disabled {
  pointer-events: all;
  opacity: 0;
  cursor: not-allowed;
}

.ps-hidden {
  display: none;
}

.ps-office365-btn {
  background-color: #4285f4 !important;
  border-radius: 0px !important;
  line-height: 40px !important;
  font-size: 15px !important;
  width: 215px;
  display: inline-flex !important;
  align-items: center;
  text-decoration: none;
  height: 50px;
}

.ps-office365-btn::before {
  content: '';
  font-size: 20px;
  display: inline-block;
  background-size: auto;
  background-repeat: no-repeat;
  width: 36px;
  height: 34px;
  margin-right: 10px;
  background-color: white;
}
/* ... */

